# openscad-ai-cs

./: .gitignore  AGENTS.md  Program.cs  README.md  bit_organizer.scad  c_server.csproj
Properties/: launchSettings.json
Tools/: CompareRendersTool.cs  IMcpTool.cs  McpToolRegistry.cs  Models.cs  RenderOpenScadTool.cs  SaveImageTool.cs
Validation/: CgalWorkerValidationService.cs  ICgalValidationService.cs
Validation/Models/: ValidationModels.cs
Validation/cgal_worker/: CMakeLists.txt  README.md
Validation/cgal_worker/src/: main.cpp
